# ohio_code

./: .gitignore  README.md  pyproject.toml
.claude/: session_notes.md  settings.local.json
archive/: 001config.yaml  001context_analyzer.py  001modelman_config.py  001web.py  ACTUAL_LMDB_SCHEMAS.md  COMPLETE_DATA_INVENTORY.md  CORPUS_CLONING_GUIDE.md  ENHANCED_LMDB_SCHEMA.md  GAP_ANALYSIS.md  LMDB_API_CONTRACT.md  LMDB_SCHEMA_IMPLEMENTATION_PHASES.md  MASTER_CHECKLIST.md  OHIO_SCOTUS_SESSION_SUMMARY.md  SCHEMA_INTEGRATION_COMPLETE.md  SESSION_NOTES_2025-11-20.md  SESSION_SUMMARY.md  SYMLINK_STRUCTURE.md  TASK_COMPLETION_REPORT.md  UPDATED_KNOWLEDGE_SERVICE_CODE.md  USING_GENERATED_SCHEMAS.md  citation_patterns.py  document_checklist.md  legal_chain_retriever.py  legal_query_processor.py  quick_start.py  scrape_opinion.py
docs/: COMPLETE_DATA_INVENTORY.md  CORPUS_CLONING_GUIDE.md  (+8 more)
ohio_caselaw/: BUILD_README.md  README.md  hello.py  older_analysis_report.txt  pyproject.toml  setup.py
ohio_caselaw/docs/: judge_opinion.md
ohio_caselaw/src/ohio_caselaw/citation_analysis/: __init__.py  analyze_citations.py  citation_mapper.py  ohio_caselaw_mapping.py
ohio_caselaw/src/ohio_caselaw/lmdb/: auto_enricher_caselaw.py  build_comprehensive_lmdb.py  build_comprehensive_lmdb_new.py
ohio_caselaw/src/ohio_caselaw/scraper/: __init__.py  analyze_older_json.py  check_progress.py  convert_json_to_jsonl.py  convert_pdf_to_text.py  convert_to_jsonl.py  convert_txt_to_json.py  create_structure.py  debug_search.py  organize_older_json.py  scrape_ohio_scotus.py  test_convert_pdf.py
(+80 files in other folders)
