[project]
name = "lawscraper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "lmdb>=1.7.5",
    "pypdf2>=3.0.1",
    "selenium>=4.38.0",
]

[tool.uv.workspace]
members = ["ohio_administration", "ohio_revised", "ohio_constitution", "packages/utils",  "ohio_case_law", "ohio_caselaw"]
