[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ohio-caselaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "lmdb>=1.7.5",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
    "selenium>=4.38.0",
]
